deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-java-app
  ports:
  - port: 8080
    targetPort: 8080
